[gd_scene load_steps=16 format=3 uid="uid://cupcn62txotjt"]

[ext_resource type="Texture2D" uid="uid://cw6ft8s12yti3" path="res://Images/Assets/Parallax Mountains/layers/parallax-mountain-foreground-trees.png" id="1"]
[ext_resource type="PackedScene" uid="uid://d3o2va27u15up" path="res://Scenes/Menus/MainMenu.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Scenes/Menus/CharacterCreator.tscn" id="3"]
[ext_resource type="Texture2D" path="res://Images/UI/StartScreen/WeedFarmTitleScreen.Midground.default.0.Atlas.res" id="4"]
[ext_resource type="Script" path="res://Scenes/Menus/StartScreen.gd" id="6"]
[ext_resource type="Theme" uid="uid://cxvi2u51orc0i" path="res://Scenes/Menus/Default.tres" id="7"]
[ext_resource type="Texture2D" uid="uid://dhkwfvrfi5vbs" path="res://Images/Assets/Parallax Mountains/layers/parallax-mountain-bg.png" id="8"]
[ext_resource type="Texture2D" uid="uid://ctguwidnd64ib" path="res://Images/Assets/Parallax Mountains/layers/parallax-mountain-trees.png" id="9"]
[ext_resource type="Texture2D" uid="uid://ci0xjb2o3i72p" path="res://Images/Assets/Parallax Mountains/layers/parallax-mountain-montain-far.png" id="10"]
[ext_resource type="Texture2D" uid="uid://dle3xr4yxit1g" path="res://Images/Assets/Parallax Mountains/layers/parallax-mountain-mountains.png" id="11"]
[ext_resource type="Script" path="res://Scenes/Menus/ParallaxBackground.gd" id="12"]
[ext_resource type="Font" path="res://Fonts/Pixelade.tres" id="12_gio5q"]
[ext_resource type="AudioStream" uid="uid://ntdhaq07hxay" path="res://Audio/GrooveyBeat2b.wav" id="13"]

[sub_resource type="Animation" id="1"]
length = 0.001

[sub_resource type="Animation" id="2"]
resource_name = "title_menu_transition_in"

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource( "6" )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxMidground" type="ParallaxBackground" parent="."]
layer = -50
scroll_limit_end = Vector2(2732, 0)
script = ExtResource( "12" )

[node name="Background" type="ParallaxLayer" parent="ParallaxMidground"]
motion_scale = Vector2(0.05, 1)
motion_mirroring = Vector2(1366, 0)

[node name="Background" type="TextureRect" parent="ParallaxMidground/Background"]
rect_min_size = Vector2(1366, 768)
texture = ExtResource( "8" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Far" type="ParallaxLayer" parent="ParallaxMidground"]
z_index = 1
motion_scale = Vector2(0.1, 1)
motion_mirroring = Vector2(1366, 0)

[node name="Far" type="TextureRect" parent="ParallaxMidground/Far"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2(1366, 768)
texture = ExtResource( "10" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Near" type="ParallaxLayer" parent="ParallaxMidground"]
z_index = 2
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(2732, 0)

[node name="Near" type="TextureRect" parent="ParallaxMidground/Near"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2(2732, 768)
texture = ExtResource( "11" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trees" type="ParallaxLayer" parent="ParallaxMidground"]
z_index = 3
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(2732, 0)

[node name="Trees" type="TextureRect" parent="ParallaxMidground/Trees"]
self_modulate = Color(0.0941176, 0.6, 0, 1)
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1022.0
offset_bottom = 599.0
texture = ExtResource( "9" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForegroundTrees" type="ParallaxLayer" parent="ParallaxMidground"]
z_index = 4
motion_offset = Vector2(1, 0)
motion_mirroring = Vector2(2732, 0)

[node name="ForegroundTrees" type="TextureRect" parent="ParallaxMidground/ForegroundTrees"]
self_modulate = Color(0.0941176, 0.6, 0, 1)
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1022.0
offset_bottom = 605.0
texture = ExtResource( "1" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plant" type="CanvasLayer" parent="."]

[node name="TextureRect2" type="TextureRect" parent="Plant"]
modulate = Color(0.243137, 1, 0, 1)
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( "4" )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="CanvasLayer" parent="."]
layer = 2

[node name="MenuRoot" type="MarginContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( "7" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="Menu/MenuRoot" instance=ExtResource( "2" )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1024.0
offset_bottom = 600.0

[node name="Panel" parent="Menu/MenuRoot/MainMenu" index="1"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -59.0
offset_right = 111.0
offset_bottom = 213.0

[node name="VBoxContainer" parent="Menu/MenuRoot/MainMenu/Panel/Buttons" index="0"]
offset_left = 40.0
offset_top = 46.0
offset_right = 184.0
offset_bottom = 226.0

[node name="CharacterCreator" parent="Menu/MenuRoot" instance=ExtResource( "3" )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1024.0
offset_bottom = 600.0

[node name="MarginContainer" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel" index="0"]
theme_override_constants/margin_right = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer" index="0"]
offset_left = 20.0
offset_top = 20.0
offset_right = 380.0
offset_bottom = 400.0

[node name="TextEdit" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" index="1"]
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource( "12_gio5q" )

[node name="TextEdit" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer3" index="1"]
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource( "12_gio5q" )

[node name="HBoxContainer2" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer" index="2"]
theme_override_constants/separation = 32

[node name="OptionButton" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2" index="1"]
selected = -1

[node name="MarginContainer" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer/Skin/Panel" index="0"]
theme_override_constants/margin_right = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_left = 1
theme_override_constants/margin_bottom = 1

[node name="Skin Color" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer/Skin/Panel/MarginContainer" index="0"]
offset_left = 1.0
offset_top = 1.0
offset_right = 24.0
offset_bottom = 24.0

[node name="Panel" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer/Hair/CenterContainer" index="0"]
offset_right = 25.0
offset_bottom = 25.0

[node name="MarginContainer" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer/Hair/CenterContainer/Panel" index="0"]
theme_override_constants/margin_right = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_left = 1
theme_override_constants/margin_bottom = 1

[node name="Skin Color" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer/Hair/CenterContainer/Panel/MarginContainer" index="0"]
offset_left = 1.0
offset_top = 1.0
offset_right = 24.0
offset_bottom = 24.0

[node name="Panel" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer/Beard/CenterContainer" index="0"]
offset_right = 25.0
offset_bottom = 25.0

[node name="MarginContainer" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer/Beard/CenterContainer/Panel" index="0"]
theme_override_constants/margin_right = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_left = 1
theme_override_constants/margin_bottom = 1

[node name="Skin Color" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HBoxContainer/Beard/CenterContainer/Panel/MarginContainer" index="0"]
offset_left = 1.0
offset_top = 1.0
offset_right = 24.0
offset_bottom = 24.0

[node name="Back" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HSplitContainer" index="0"]
offset_right = 24.0
offset_bottom = 17.0

[node name="Begin" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CreationPanel/MarginContainer/VBoxContainer/HSplitContainer" index="1"]
offset_left = 36.0
offset_right = 62.0
offset_bottom = 17.0

[node name="CharPreview" parent="Menu/MenuRoot/CharacterCreator/HBoxContainer/CenterContainer" index="0"]
offset_right = 400.0
offset_bottom = 250.0

[node name="Notifications" type="CanvasLayer" parent="."]
layer = 3

[node name="Alert" type="Control" parent="Notifications"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( "7" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( "1" )
anims/title_menu_transition_in = SubResource( "2" )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( "13" )
pitch_scale = 0.9
autoplay = true
bus = &"Music"

[editable path="Menu/MenuRoot/MainMenu"]
[editable path="Menu/MenuRoot/CharacterCreator"]
[editable path="Menu/MenuRoot/CharacterCreator/HBoxContainer/CenterContainer/CharPreview/Player"]
